# RAGBackend

./: .env.docker  .env.local  .gitignore  docker-compose.yaml  dockerfile  pyproject.toml  test.py  test.txt  text.txt
alembic/: env.py
alembic/versions/: 3cb8ffc80a87_documents_model.py  4b689ddbfa55_removed_original_filename_column.py  994821ea8bc2_documents_model.py  cf72c680d3a6_.py  fa379c2825f2_chunk_model_added.py
app/: __init__.py  main.py
app/api/: __init__.py  document.py
app/core/: config.py
app/db/: __init__.py  models.py  session.py
app/schemas/: __init__.py  document.py
app/services/: chunker.py
app/workers/: __init__.py  tasks.py
test/files/: associate_onboarding.md  client_intake_policy.md  employee_handbook.md
