[project]
name = "ragbackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "dramatiq[redis]>=1.3.0",
    "fastapi[standard]>=0.123.9",
    "httpx>=0.28.1",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "qdrant-client>=1.16.1",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.44",
    "uuid6>=2025.0.1",
]
